Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Document__c/Vetting_Document__c.object-meta.xml
<CustomObject>
    <label>Vetting Document</label>
    <nameField>
        <label>Vetting Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vetting Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>