Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Document__c/fields/Change_in_Circumstances__c.field-meta.xml
<CustomField>
    <fullName>Change_in_Circumstances__c</fullName>
    <label>Change in Circumstances</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>