Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Document__c/fields/Country_of_Birth_del__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Birth_del__c</fullName>
    <label>Country of Birth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countrys</valueSetName>
    </valueSet>
</CustomField>