Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Document__c/fields/Criminal_Conviction_Date__c.field-meta.xml
<CustomField>
    <fullName>Criminal_Conviction_Date__c</fullName>
    <label>Criminal Conviction Date</label>
    <type>Date</type>
</CustomField>