Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Document__c/fields/Criminal_Conviction_Sentence__c.field-meta.xml
<CustomField>
    <fullName>Criminal_Conviction_Sentence__c</fullName>
    <label>Criminal Conviction Sentence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>