Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Document__c/fields/Criminal_Convictions_Nature__c.field-meta.xml
<CustomField>
    <fullName>Criminal_Convictions_Nature__c</fullName>
    <label>Criminal Conviction Nature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>