Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Document__c/fields/Date_Moved_to_Address__c.field-meta.xml
<CustomField>
    <fullName>Date_Moved_to_Address__c</fullName>
    <label>Date Moved to Address</label>
    <type>Date</type>
</CustomField>