Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Document__c/fields/Document_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Completed_Date__c</fullName>
    <label>Document Completed Date</label>
    <type>DateTime</type>
</CustomField>