Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Document__c/fields/Document_Text__c.field-meta.xml
<CustomField>
    <fullName>Document_Text__c</fullName>
    <label>Document Text</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>