Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Document__c/fields/Enhanced_Vetting__c.field-meta.xml
<CustomField>
    <fullName>Enhanced_Vetting__c</fullName>
    <label>Enhanced Vetting</label>
    <referenceTo>Enhanced_Vetting__c</referenceTo>
    <relationshipLabel>Vetting Documents</relationshipLabel>
    <relationshipName>Vetting_Documents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>