Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Document__c/fields/Flow_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_Api_Name__c</fullName>
    <label>Flow Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>