Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Document__c/fields/Flow_URL__c.field-meta.xml
<CustomField>
    <fullName>Flow_URL__c</fullName>
    <label>Available Action</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>