Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Document__c/fields/Impending_Prosecution_Nature__c.field-meta.xml
<CustomField>
    <fullName>Impending_Prosecution_Nature__c</fullName>
    <label>Impending Prosecution Nature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>