Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Document__c/fields/Mothers_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Mothers_Full_Name__c</fullName>
    <label>Mothers Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>