Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Document__c/fields/Mothers_Surname__c.field-meta.xml
<CustomField>
    <fullName>Mothers_Surname__c</fullName>
    <label>Mothers Surname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>