Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Document__c/fields/Motoring_Offence_Date__c.field-meta.xml
<CustomField>
    <fullName>Motoring_Offence_Date__c</fullName>
    <label>Motoring Offence Date</label>
    <type>Date</type>
</CustomField>