Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Document__c/fields/Motoring_Offence_Nature__c.field-meta.xml
<CustomField>
    <fullName>Motoring_Offence_Nature__c</fullName>
    <label>Motoring Offence Nature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>