Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Document__c/fields/Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Name_Text__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Name</label>
    <type>Text</type>
</CustomField>