Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Document__c/fields/Nationality_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Nationality_Change_Date__c</fullName>
    <label>Nationality Change Date</label>
    <type>Date</type>
</CustomField>