Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Document__c/fields/No_change_confirmed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>No_change_confirmed_Date_Time__c</fullName>
    <label>No Change Confirmed Date/Time</label>
    <type>DateTime</type>
</CustomField>