Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Document__c/fields/No_Changes_Confirmed_By__c.field-meta.xml
<CustomField>
    <fullName>No_Changes_Confirmed_By__c</fullName>
    <label>No Changes Confirmed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>