Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Document__c/fields/Previous_Nationality__c.field-meta.xml
<CustomField>
    <fullName>Previous_Nationality__c</fullName>
    <label>Previous Nationality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>