Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Document__c/fields/Resident_Outside_UK_Details__c.field-meta.xml
<CustomField>
    <fullName>Resident_Outside_UK_Details__c</fullName>
    <label>Resident Outside UK Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>