Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Document__c/fields/School_Leaving_Date__c.field-meta.xml
<CustomField>
    <fullName>School_Leaving_Date__c</fullName>
    <label>School Leaving Date</label>
    <type>Date</type>
</CustomField>