Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Document__c/fields/Town_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Town_of_Birth__c</fullName>
    <label>Town of Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>