Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Document__c/fields/Verified_by__c.field-meta.xml
<CustomField>
    <fullName>Verified_by__c</fullName>
    <label>Verified by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>