Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Document__c/fields/Vetting_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Vetting_Requirement__c</fullName>
    <label>Vetting Requirement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>